# embedded_academy_freertos

./: .gitmodules  CMakeLists.txt  LICENSE
01-hello_freertos/: CMakeLists.txt  main.c
02-delay_until/: CMakeLists.txt  main.c
03-timers_task/: CMakeLists.txt  FreeRTOSConfig.h  main.c
04-system_malloc/: CMakeLists.txt  FreeRTOSConfig.h  main.c
05-polling_events/: CMakeLists.txt  main.c
06-shared_data/: CMakeLists.txt  main.c
07-osal_basics/: CMakeLists.txt  main.c
08-queue_pointers/: CMakeLists.txt  main.c
09-message_buffers/: CMakeLists.txt  main.c
10-mutex_semphr/: CMakeLists.txt  main.c
11-deadlock_mutex/: CMakeLists.txt  FreeRTOSConfig.h  main.c
12-trace_task/: CMakeLists.txt  FreeRTOSConfig.h  main.c
13-queue_set/: CMakeLists.txt  FreeRTOSConfig.h  main.c
14-priority_inversion/: CMakeLists.txt  main.c
15-isr_yield/: CMakeLists.txt  main.c
common/: CMakeLists.txt  assert.c  print.c
osal/: CMakeLists.txt  osal.h
osal/freertos/: osal.c  osal_types.h
